force-app/main/default/objects/Admission_Decision__c/fields/FinalOfferAccepted__c.field-meta.xml
<CustomField>
    <fullName>FinalOfferAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Accepted?</label>
    <type>Checkbox</type>
</CustomField>