force-app/main/default/objects/Admission_Decision__c/fields/OfferWithdrawn__c.field-meta.xml
<CustomField>
    <fullName>OfferWithdrawn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Withdrawn?</label>
    <type>Checkbox</type>
</CustomField>